# wikimaker

./: .gitignore  CLAUDE.md  browser_server.py  generate_draft.py  start.sh
backend/: main.py  pyproject.toml
engine/: author_check.py  classifier.py  crawler.py  extractor.py  fetcher.py  fetcher_browser.py  identifier.py  link_extractor.py  llm.py  models.py  notability.py  relevance.py  researcher.py  researcher_ids.py  suggester.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CandidateCard.tsx
frontend/src/pages/: DraftPage.tsx  HubPage.tsx  IdentifyPage.tsx  ResearchPage.tsx
wiki/: wiki_check.py  wikitext.py
